--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,3 +197,11 @@ padding: 25px;
   line-height: 1.75;
   text-align: center;
   }
+
+@media screen and (max-width: 980px) {}
+@media screen and (max-width: 768px) {}
+@media screen and (max-width: 640px) {
+  .header  {
+  position: static;
+  }
+}
