--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,10 +198,36 @@ padding: 25px;
   text-align: center;
   }
 
-@media screen and (max-width: 980px) {}
-@media screen and (max-width: 768px) {}
+@media screen and (max-width: 980px) {
+  .container {
+    width: 700px;
+  }
+  .headerContainer {
+    width: 700px;
+  }
+}
+@media screen and (max-width: 768px) {
+    .container {
+      width: 600px;
+    }
+    .headerContainer {
+      width: 600px;
+    }
+
+}
 @media screen and (max-width: 640px) {
-  .header  {
-  position: static;
+  
+  .container {
+    width: 350px;
+    
+  }
+  .headerContainer {
+    width: 350px;
+    position: static;
+    
+  }
+  .header, .topnav  {   
+    float: none;
+    width: 100%;
   }
 }
